--- a/templates/suppliers/supplier_cashflow_add.html
+++ b/templates/suppliers/supplier_cashflow_add.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/supplier.css') }}">
 
 <div class="container py-5 fade-in-up" style="max-width: 800px;">
