--- a/templates/suppliers/supplier_cashflow.html
+++ b/templates/suppliers/supplier_cashflow.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/supplier.css') }}">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
