--- a/templates/suppliers/supplier_ledger.html
+++ b/templates/suppliers/supplier_ledger.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/supplier.css') }}">
 
 <div class="container-fluid py-4 fade-in-up">
@@ -109,3 +109,4 @@
     </div>
 </div>
 {% endblock %}
+
